# sigproc

./: .gitignore  CMakeLists.txt
cmake/: UpdateSubmodules.cmake
hampel/: CMakeLists.txt
hampel/include/: hampel.hpp
hampel/src/: hampel.cpp
python/: test_hampel.py
signal_processing/: CMakeLists.txt
signal_processing/include/: hampel.hpp
sigproc/: CMakeLists.txt
sigproc/include/: hampel.hpp  tail_window_stat.hpp
test/: CMakeLists.txt  hampel_test.cpp  signal_processing_test.cpp  tail_window_stat_test.cpp
